--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -1,1 +1,40 @@
-h1 ВСЕМ ПРИВЕТ
+div(class='wrapper')
+    div(class='header__wrapper')
+        div(class='header__logo')
+            img(src="../assets/images/logo.png", alt="logo")
+        div(class="header__burger")
+            span(class="burger__span__first")
+            span(class="burger__span__second")
+            span(class="burger__span__third")
+        nav(class="header__nav")
+            ul(class="header__list")
+                li(class="header__item") КАТАЛОГ ТОВАРОВ
+                li(class="header__item") ДОСТАВКА И ОПЛАТА
+                li(class="header__item") ЦЕНЫ 
+                li(class="header__item") КОНТАКТЫ
+        div(class="phone__number") 
+            span +7 (812) 
+                span(class="last__phone__numbers") 509 21 98
+        div(class="call__me__block")
+            div(class="call__me") ПЕРЕЗВОНИТЕ МНЕ
+            hr
+        div(class="logo")
+            img(class="icon__first", src="../assets/images/vk.svg", alt="vk")
+            img(class="icon__second", src="../assets/images/telegram.svg", alt="telegram")
+            img(class="icon__third ", src="../assets/images/inst.svg", alt="inst")
+            img(class="icon__fourth", src="../assets/images/whatsup.svg", alt="inst")
+        div(class="circles")
+            div(class="search__circle")
+                img(class="inside", src="../assets/images/loupe.svg", alt="loupe")
+            div(class="heart__circle")
+                img(class="inside", src="../assets/images/heart.svg", alt="heart")
+            div(class="shopping__cart__circle")
+                img(class="inside", src="./assets/images/shopping-cart.svg", alt="shopping-cart")
+            span(class="ellipse")
+                span(class="ten") 10
+
+
+
+
+
+                
