--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,46 +1,308 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&display=swap');
-
-h1 {
-    font-family: 'Montserrat', sans-serif;
-} */
-
+/*     @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&display=swap');
+ */
 /* montserrat-regular - latin */
-@font-face {
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 400;
-    src: local(''),
-         url('../../assetes/fonts/montserrat-v24-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-         url('../../assetes/fonts/montserrat-v24-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-  }
-  /* montserrat-600 - latin */
-  @font-face {
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 600;
-    src: local(''),
-         url('../../assetes/fonts/montserrat-v24-latin-600.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-         url('../../assetes/fonts/montserrat-v24-latin-600.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-  }
-  /* montserrat-700 - latin */
-  @font-face {
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 700;
-    src: local(''),
-         url('../../assetes/fonts/montserrat-v24-latin-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-         url('../../assetes/fonts/montserrat-v24-latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-  }
-  /* montserrat-800 - latin */
-  @font-face {
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 800;
-    src: local(''),
-         url('../../assetes/fonts/montserrat-v24-latin-800.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-         url('../../assetes/fonts/montserrat-v24-latin-800.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-  }
 
-  h2 {
-    font-family: 'Montserrat', sans-serif;
-} 
+@font-face {
+  font-family:'Montserrat';
+  src: url(../../assets/fonts/Montserrat-Regular.woff);
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Montserrat';
+  src: url(../../assets/fonts/Montserrat-ExtraBold.woff);
+  font-style: normal;
+  font-weight: 800;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Montserrat';
+  src: url(../../assets/fonts/Montserrat-SemiBold.woff);
+  font-style: normal;
+  font-weight: 600;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Montserrat';
+  src: url(../../assets/fonts/Montserrat-Bold.ttf);
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Lato';
+  src: url(../../assets/fonts/Lato-SemiBold.ttf);
+  font-style: normal;
+  font-weight: 800;
+  font-display: swap;
+}
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol, ul {
+  list-style: none;
+}
+blockquote, q {
+  quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+	content: none;
+}
+table {
+  border-collapse: collapse;
+	border-spacing: 0;
+}
+
+
+
+*{
+  background-color: #FFFFFF;
+}
+
+.wrapper{ 
+ margin: 0 auto;
+ max-width: 1920px;
+ font-family: 'Montserrat';
+}
+
+.header__wrapper{
+ display: inline-flex;
+ margin: 26px 0px 0px 63px;
+ flex-wrap: wrap;
+ align-items: center;
+ justify-content: space-between;
+}
+
+.header__logo{
+  cursor: pointer;
+  height: 97px;
+  width: 100px;
+  left: 0px;
+  top: 0px;
+  border-radius: 0px;
+}
+
+.header__burger{
+  position: relative;
+  box-sizing: border-box;
+  height: 56px;
+  width: 56px;
+  border: 1px solid #4C858B;
+  border-radius: 50%;
+  margin-left: 52px;
+  margin-top: 2px;
+  margin-right: 31px;
+  cursor: pointer;
+}
+
+.burger__span__first{
+  width: 22px;
+  height: 2px;
+  position: absolute;
+  top: 50%;
+  transform:  translateY(-50%);
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #4C858B;
+}
+
+.burger__span__second{
+  width: 22px;
+  height: 2px;
+  position: absolute;
+  top: 36px;
+  transform: translateY(-50%);
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #4C858B;
+}
+
+.burger__span__third{
+  width: 22px;
+  height: 2px;
+  position: absolute;
+  top: 18px;
+  transform: translateY(-50%);
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #4C858B;
+}
+
+.header__list{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.header__item{
+  cursor: pointer;
+  margin-right: 36px;
+  font-weight: 700;
+  color: #4C858B;
+
+}
+
+.header__item:last-child{
+  margin-right: 97px;
+
+
+}
+
+.phone__number{
+  cursor: pointer;
+  color: #4C858B; 
+  font-weight: 400;
+  letter-spacing: 0.08em;
+  
+}
+
+.last__phone__numbers{
+  font-weight: 700;
+  color: black;
+
+}
+
+.call__me__block{
+  position: relative;
+  margin-left: 70px;
+  margin-right: 61px;
+  width: 156px;
+  height: 19px;
+  color: #AE2236;
+}
+
+.call__me{
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 17px;
+  text-align: center;
+  text-transform: uppercase;
+  cursor: pointer;
+/*   border-bottom: 1px dashed red; */
+}
+
+hr {
+  height: 0px;
+  width: 150px;
+  left: 1195px;
+  border: 1px dashed #AE2236;
+}
+
+.logo{
+  display: inline-flex;
+}
+
+.icon__first {
+  margin-right: 12px;
+  cursor: pointer;
+}
+
+.icon__second {
+  margin-right: 16px;
+  cursor: pointer;
+}
+
+.icon__third {
+  margin-right: 18px;
+  cursor: pointer;
+}
+
+.icon__fourth {
+  margin-right: 60px;
+  cursor: pointer;
+}
+
+.circles{
+  display: inline-flex;
+  
+}
+
+.search__circle{
+  box-sizing: border-box;
+  height: 56px;
+  width: 56px;
+  border: 1px solid #E5E5E5;
+  border-radius: 100%;
+  cursor: pointer;
+  margin-right: 16px;
+}
+
+.heart__circle{
+  box-sizing: border-box;
+  height: 56px;
+  width: 56px;
+  border: 1px solid #E5E5E5;
+  border-radius: 100%;
+  cursor: pointer;
+  margin-right: 16px;
+}
+
+.shopping__cart__circle{
+  box-sizing: border-box;
+  height: 56px;
+  width: 56px;
+  border: 1px solid #E5E5E5;
+  border-radius: 100%;
+  cursor: pointer;
+}
+
+
+.inside{
+  margin:15px
+}
+
+.ellipse{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+  position: relative;
+  background-color: #E33E54;
+  width: 21px;
+  height: 21px;
+  border-radius: 100%;
+  left:-8%;
+}
+
+.ten{
+  color: #FFFFFF;
+  position: relative;
+  font-family: "Lato";
+  font-size: 11px;
+  font-weight: 600;
+  line-height: 13px;
+  background-color: #E33E54;
+}
