--- a/src/views/layouts/default.pug
+++ b/src/views/layouts/default.pug
@@ -1,3 +1,4 @@
+title Дымоход 
 block variables
 
 doctype html
@@ -6,13 +7,12 @@ html(lang="ru")
     meta(charset="UTF-8")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    title #{title ? title : 'Дымоход'}
+    title #{title ? title : 'Главная страница'}
     link(href="/assets/styles/main.css" rel="stylesheet")
   body
     main
       include ../../components/header/header
       block content
-      include ../../components/body/body
       include ../../components/footer/footer
     script(src="/assets/js/index.js")
     block scripts
