--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -17,7 +17,7 @@ div(class='wrapper')
                 span(class="last__phone__numbers") 509 21 98
         div(class="call__me__block")
             div(class="call__me") ПЕРЕЗВОНИТЕ МНЕ
-            hr
+            hr(class="call__me__line")
         div(class="logo")
             img(class="icon__first", src="../assets/images/vk.svg", alt="vk")
             img(class="icon__second", src="../assets/images/telegram.svg", alt="telegram")
