--- a/src/views/layouts/default.pug
+++ b/src/views/layouts/default.pug
@@ -13,6 +13,7 @@ html(lang="ru")
     main
       include ../../components/header/header
       block content
+      include ../../components/body/body
       include ../../components/footer/footer
     script(src="/assets/js/index.js")
     block scripts
